--- a/ItBolt.WPF/App.xaml
+++ b/ItBolt.WPF/App.xaml
@@ -6,6 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/DataTmpResource.xaml" />
+                <ResourceDictionary Source="/Resources/ErrorTmpResource.xaml" />
+                <ResourceDictionary Source="/Resources/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
