--- a/ItBolt.WPF/Views/AddBoltView.xaml
+++ b/ItBolt.WPF/Views/AddBoltView.xaml
@@ -1,32 +1,64 @@
-﻿<UserControl x:Class="ItBolt.WPF.ViewModels.AddBoltView"
+﻿<UserControl x:Class="ItBolt.WPF.Views.AddBoltView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ItBolt.WPF.ViewModels"
+             xmlns:local="clr-namespace:ItBolt.WPF.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="AliceBlue">
     <Grid>
 
-        <Label FontSize="20" HorizontalAlignment="Center" Content="Bolt hozzáadása"/>
-        <Label Content="Bolt neve: " />
-        <TextBox>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="200" />
+        </Grid.ColumnDefinitions>
+        <Label FontSize="20" HorizontalAlignment="Center" Content=" Új bolt hozzáadása" Grid.Row="0" />
+
+
+        <Label Content="Bolt neve: " Grid.Row="1" Grid.Column="0" />
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="txt_BoltNev">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.bolt_neve" />
+                <Binding Path="SelectedBolt.bolt_neve"  UpdateSourceTrigger="PropertyChanged"  />
             </TextBox.Text>
         </TextBox>
-        <Label Content="Bolt címe: " />
-        <TextBox>
+        <Label Content="Bolt címe: " Grid.Row="2" Grid.Column="0"/>
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtBoltCim">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.bolt_cime" />
+                <Binding Path="SelectedBolt.bolt_cime"  UpdateSourceTrigger="PropertyChanged"  />
             </TextBox.Text>
         </TextBox>
-        <Label Content="Bolt Nyitvatartási idő: " />
-        <TextBox>
+        <Label Content="Bolt Nyitvatartási idő: " Grid.Row="3" Grid.Column="0" />
+        <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtNyitvatartas">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.nyitvatartasi_ido" />
+                <Binding Path="SelectedBolt.nyitvatartasi_ido"  UpdateSourceTrigger="PropertyChanged" />
             </TextBox.Text>
         </TextBox>
-        
+
+        <Button Content="Új" Grid.Row="4" Command="{Binding NewCmd}" Margin="118,58,-18,-54" RenderTransformOrigin="0.509,0.577" Grid.Column="1"/>
+        <Button Content="Mentés" Grid.Row="4" Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedBolt}" Margin="82,58,0,-54">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
+                    <Setter Property="IsEnabled" Value="false" />
+                    <Style.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding ElementName=txtBoltNev, Path=(Validation.HasError)}" Value="false" />
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="true" />
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Content="Törlés" Grid.Column="1" Grid.Row="4" Command="{Binding DeleteCmdAsync}" CommandParameter="{Binding SelectedBolt}" Margin="409,58,-309,-54"/>
     </Grid>
 </UserControl>
