--- a/ItBolt.WPF/Views/BelepesView.xaml
+++ b/ItBolt.WPF/Views/BelepesView.xaml
@@ -1,29 +1,26 @@
-﻿<Window x:Class="ItBolt.Belepes"
+﻿<UserControl x:Class="ItBolt.WPF.Views.BelepesView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ItBolt"
+        xmlns:local="clr-namespace:ItBolt.WPF.Views"
         mc:Ignorable="d"
-        Title="Beléptető rendszer" Height="450" Width="800" Background="Black">
+         Height="450" Width="800" Background="AliceBlue">
     <StackPanel>
-        <Label Foreground="#FF78AD45" HorizontalAlignment="Center">Belépés</Label>
-        <Separator/>
-        <Label Content="Felhasználó" Foreground="Wheat"></Label>
-        <TextBox Name="felhsznalo" Background="White" Foreground="Black" FontSize="18" Height="57" Width="695" ></TextBox>
-        <Label Content="Jelszó" Foreground="Wheat"></Label>
-        <TextBox Name="jelszo" Background="White" Foreground="Black" FontSize="18" RenderTransformOrigin="0.5,0.5" Height="49" Width="675" >
-            
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.422"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBox.RenderTransform></TextBox>
-        <Button x:Name="belepesgomb" Click="submit_click" Content="belepes" Margin="50" Height="94" Width="385"/>
-
+        <Label Foreground="Black" HorizontalAlignment="Center" FontSize="30">Belépés</Label>
+        <Separator Margin="0,0,0,50"/>
+        <Label Content="Belépési név" Foreground="Black"  FontWeight="Bold" HorizontalAlignment="Center" />
+        <Border CornerRadius="10" Background="#c0ebed" Margin="0,10,0,10" Height="30" Width="300" BorderThickness="1" BorderBrush="Blue">
+            <TextBox Background="Transparent" Foreground="Black" FontSize="18" Height="30" Width="250" BorderThickness="0"/>
+        </Border>
+        <Label Content="Jelszó" Foreground="Black" 
+               FontWeight="Bold" HorizontalAlignment="Center"/>
+        <Border CornerRadius="10" Background="#c0ebed" Margin="0,10,0,10" Height="30" Width="300" BorderThickness="1" BorderBrush="Blue">
+            <TextBox Background="Transparent" Foreground="Black" FontSize="18" Height="30" Width="250" BorderThickness="0"/>
+        </Border>
+        <Border CornerRadius="10" Background="#45b563" Margin="0,40,0,0" Height="30" Width="250" >
+            <Button Content="Belépés" BorderBrush="Transparent" Background="Transparent" Width="230" Height="25" />
+        </Border>
     </StackPanel>
 
-</Window>
+</UserControl>
