--- a/ItBolt.WPF/Resources/Styles.xaml
+++ b/ItBolt.WPF/Resources/Styles.xaml
@@ -23,9 +23,24 @@
             </Style>
         </Style.Resources>
     </Style>
-
-    <Style TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="Black"/>
+    <!--<Border.Style>
+                <Style>
+                    <Setter Property="Border.Background" Value="LightCyan"/>
+                    <Style.Triggers>
+                        <Trigger Property="Border.IsMouseOver" Value="True">
+                            <Setter Property="Border.Background" Value="Green" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>-->
+    
+    
+    <Style TargetType="Button" x:Key="BelepesButton">
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="Foreground" Value="Navy"/>
+        <Setter Property="FontWeight" Value="DemiBold" />
+        <Setter Property="Background"
+                Value="{Binding Background, RelativeSource={RelativeSource Self}}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -35,10 +50,27 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="Button.Background" Value="LightCyan"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="Red"/>
+            <Trigger Property="Button.IsMouseOver" Value="True">
+                <Setter Property="Button.Foreground" Value="Black" />
+                <Setter Property="Button.Background" Value="Blue" />
+                <Setter Property="Button.FontWeight" Value="Bold" />
+                <Setter Property="Button.FontSize" Value="15" />
+            </Trigger>
+        </Style.Triggers>
+        
+    </Style>
+
+
+
+    <Style x:Key="Triggers" TargetType="Button">
+        <Style.Triggers>
+            <Trigger Property="IsPressed" Value="true">
+                
+                <Setter Property = "Foreground" Value="Blue"/>
             </Trigger>
         </Style.Triggers>
     </Style>
+    
 </ResourceDictionary>
