--- a/ItBolt.WPF/Views/AddBoltView.xaml
+++ b/ItBolt.WPF/Views/AddBoltView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ItBolt.WPF.Views"
+             xmlns:local="clr-namespace:ItBolt.WPF.Views" xmlns:viewmodels="clr-namespace:ItBolt.WPF.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddBoltViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="AliceBlue">
@@ -47,7 +47,7 @@
         <Button Content="Mentés" Grid.Row="4" Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedBolt}" Margin="82,58,0,-54">
             <Button.Style>
                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
-                    <Setter Property="IsEnabled" Value="false" />
+                    <Setter Property="IsEnabled" Value="True" />
                     <Style.Triggers>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
