--- a/ItBolt.WPF/Views/BoltKimutatasView.xaml
+++ b/ItBolt.WPF/Views/BoltKimutatasView.xaml
@@ -89,7 +89,7 @@
             </StackPanel>
             <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBox Width="200" Text="{Binding SearchKey}" VerticalAlignment="Center" />
-                <Button Content="Keresés" Command="{Binding LoadDataCmd}" />
+                <Button Content="Keresés" Command="{Binding LoadDataCmd}" Margin="12,0,12,0" />
             </StackPanel>
         </Grid>
 
