--- a/ItBolt.WPF/Resources/DataTmpResource.xaml
+++ b/ItBolt.WPF/Resources/DataTmpResource.xaml
@@ -12,8 +12,14 @@
     <DataTemplate DataType="{x:Type viewmodels:BoltKimutatasViewModel}">
         <views:BoltKimutatasView/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodels:RaktarKimutatasViewModel}">
+        <views:RaktarKimutatasView/>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type viewmodels:AddBoltViewModel}">
         <views:AddBoltView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodels:AddRaktarViewModel}">
+        <views:AddRaktarView/>
     </DataTemplate>
     <DataTemplate DataType="{x:Type viewmodels:UdvozloViewModel}">
         <views:UdvozloView/>
