--- a/ItBolt.WPF/Views/AddRaktarView.xaml
+++ b/ItBolt.WPF/Views/AddRaktarView.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="ItBolt.WPF.Views.AddBoltView"
+﻿<UserControl x:Class="ItBolt.WPF.Views.AddRaktarView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ItBolt.WPF.Views" 
              xmlns:viewmodels="clr-namespace:ItBolt.WPF.ViewModels" 
-             d:DataContext="{d:DesignInstance Type=viewmodels:AddBoltViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="AliceBlue">
+             Background="Transparent">
     <Grid>
 
 
@@ -23,36 +22,30 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="200" />
         </Grid.ColumnDefinitions>
-        <Label FontSize="20" HorizontalAlignment="Center" Content=" Új bolt hozzáadása" Grid.Row="0" />
+        <Label FontSize="20" HorizontalAlignment="Center" Content=" Új raktár hozzáadása" Grid.Row="0" />
 
 
-        <Label Content="Bolt neve: " Grid.Row="1" Grid.Column="0" />
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="txt_BoltNev">
+        <Label Content="Raktár neve: " Grid.Row="1" Grid.Column="0" />
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtRaktarNeve">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.bolt_neve"  UpdateSourceTrigger="PropertyChanged"  />
+                <Binding Path="SelectedRaktar.raktar_neve"  UpdateSourceTrigger="PropertyChanged"  />
             </TextBox.Text>
         </TextBox>
-        <Label Content="Bolt címe: " Grid.Row="2" Grid.Column="0"/>
-        <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtBoltCim">
+        <Label Content="Raktár címe: " Grid.Row="2" Grid.Column="0"/>
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtRaktarHely">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.bolt_cime"  UpdateSourceTrigger="PropertyChanged"  />
+                <Binding Path="SelectedRaktar.raktar_helye"  UpdateSourceTrigger="PropertyChanged"  />
             </TextBox.Text>
         </TextBox>
-        <Label Content="Bolt Nyitvatartási idő: " Grid.Row="3" Grid.Column="0" />
-        <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtNyitvatartas">
+        <Label Content="Raktár bérlési ideje: " Grid.Row="3" Grid.Column="0" />
+        <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtRaktarBerles">
             <TextBox.Text>
-                <Binding Path="SelectedBolt.nyitvatartasi_ido"  UpdateSourceTrigger="PropertyChanged" />
+                <Binding Path="SelectedRaktar.Berlesi_ido"  UpdateSourceTrigger="PropertyChanged" />
             </TextBox.Text>
         </TextBox>
-        <Label Content="Raktár id: " Grid.Row="4" Grid.Column="0" />
-        <TextBox Grid.Row="4" Grid.Column="1" x:Name="txtRaktarID">
-            <TextBox.Text>
-                <Binding Path="SelectedBolt.raktarID"  UpdateSourceTrigger="PropertyChanged"  />
-            </TextBox.Text>
-        </TextBox>
-        
+
         <Button Content="Új" Grid.Row="5" Command="{Binding NewCmd}" Margin="118,58,-18,-54" RenderTransformOrigin="0.509,0.577" Grid.Column="1"/>
-        <Button Content="Mentés" Grid.Row="5" Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedBolt}" Margin="82,58,0,-54">
+        <Button Content="Mentés" Grid.Row="5" Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedRaktar}" Margin="82,58,0,-54">
             <Button.Style>
                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                     <Setter Property="IsEnabled" Value="True" />
@@ -67,6 +60,6 @@
                 </Style>
             </Button.Style>
         </Button>
-        <Button Content="Törlés" Grid.Column="1" Grid.Row="5" Command="{Binding DeleteCmdAsync}" CommandParameter="{Binding SelectedBolt}" Margin="409,58,-309,-54"/>
+        <Button Content="Törlés" Grid.Column="1" Grid.Row="5" Command="{Binding DeleteCmdAsync}" CommandParameter="{Binding SelectedRaktar}" Margin="409,58,-309,-54"/>
     </Grid>
 </UserControl>
