--- a/ItBolt.WPF/Views/BoltKimutatasView.xaml
+++ b/ItBolt.WPF/Views/BoltKimutatasView.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Expander Grid.Row="1" Header="Bolt adatok" >
+        <!--<Expander Grid.Row="1" Header="Szűrés" >
             <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -75,10 +75,10 @@
                 </Button>
                 <Button Content="Törlés" Grid.Column="2" Grid.Row="2" Command="{Binding DeleteCmdAsync}" CommandParameter="{Binding SelectedBolt}"/>
             </Grid>
-        </Expander>
+        </Expander>-->
 
         <Grid Grid.Row="2">
-            <StackPanel Grid.Column="0" Orientation="Horizontal">
+            <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="10,10,0,10">
                 <TextBlock Text="Összesen: "/>
                 <TextBlock Text="{Binding TotalItems}"/>
                 <TextBlock Text=", elem per oldal: "/>
@@ -89,7 +89,7 @@
             </StackPanel>
             <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBox Width="200" Text="{Binding SearchKey}" VerticalAlignment="Center" />
-                <Button Content="Keresés" Command="{Binding LoadDataCmd}" Margin="12,0,12,0" />
+                <Button Content="Keresés" Command="{Binding LoadDataCmd}" Margin="12,0,12,0" Height="20" />
             </StackPanel>
         </Grid>
 
